fix menu on firefox

--- a/static/css/menu.scss
+++ b/static/css/menu.scss
@@ -1,7 +1,6 @@
 @import 'colors';
 
 .menu {
-    float: left;
     list-style-type: none;
     margin: 0 0 15px;
     padding: 0;
